<resources>
    <string name="app_name">Valle Restaurant</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="Terms_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="forgot_pass">Forget Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="social">Connect with social</string>
    <string name="already_account">Already Have a account? Sign in</string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert">Alert!</string>
    <string name="r_u_sure_u_want_to_exit">Are you sure? you want to exit.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="item_category">Item Category</string>
    <string name="upload_item_image">Upload item image</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="add_new_item_in_menu">Add New Item in menu</string>
    <string name="item_description">Item Description</string>
    <string name="preparing">Preparing</string>
    <string name="ready">Ready</string>
    <string name="assistance">Assistance</string>
    <string name="call_delivery_boy">Call Delivery Boy</string>
    <string name="call_app_admin">Call App Admin</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_foodie">Welcome to Valle Food</string>
    <string name="verification_code_send_to_your_mobile_number">Verification code send to your mobile number</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="don_t_receive_the_code">Don\'t receive the code?</string>
    <string name="resend">RESEND</string>
    <string name="discover_new_dishes_everyday_and_hold_your_favourite_restaurant">Discover new dishes everyday and hold your favourite restaurant</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="setting">Setting</string>
    <string name="address">Address</string>
    <string name="please_enter_your_old_password">Please enter your old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_conf_password">Please enter confirm password</string>
    <string name="plz_enter_restaurant_name">Please enter restaurant name</string>
    <string name="plz_enter_phone_number">Please enter phone number</string>
    <string name="plz_enter_your_email">Please enter your email</string>
    <string name="plz_enter_restaurant_address">Please enter your restaurant address</string>
    <string name="plz_enter_your_password">Please enter your password</string>
    <string name="plz_enter_conf_password">Please enter confirm password</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="valle_food">Valle Food</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="failure_msg">failure</string>
    <string name="enter_your_number_error">Please enter your number</string>
    <string name="enter_your_password_error">Please enter your password</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="exit_msg">Exit!</string>
    <string name="do_you_want_exit">Do you want to exit from app?</string>
    <string name="no_msg">No</string>
    <string name="enter_otp">Please enter OTP</string>
    <string name="enter_code">Please enter valid code</string>
    <string name="order_number">Order Number:</string>
    <string name="order_amount">Order Amount: $</string>
    <string name="please_wait_msg">Please wait...</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="select_catg">Please Select Category</string>
    <string name="enter_item_name">Please enter item name</string>
    <string name="enter_item_price">Please enter item price</string>
    <string name="enter_item_desc">Please enter item description</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo!</string>
    <string name="payment_type">Payment Type:</string>
    <string name="grand_total">Grand Total: $</string>
    <string name="wait_delivery_msg">Please wait..we are assigning the delivery boy</string>
    <string name="admin_error_msg">Admin not connected yet</string>
    <string name="reject_order">Are you sure. You want to reject this order</string>
    <string name="order_not_found">Orders not found</string>
    <string name="logout_msg">Logout!</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="select_file">Select File</string>
    <string name="resturent_address">Please enter restaurant address</string>
    <string name="resturent_mobile_number">Please enter restaurant mobile number</string>
    <string name="resturent_email">Please enter restaurant email</string>
    <string name="resturent_name">Please enter restaurant name</string>
    <string name="permisiion_necessary">Permission necessary</string>
    <string name="external_storage">External storage permission is necessary</string>
    <string name="camera_permission">Camera permission is necessary</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_five_day">Last 5 days</string>
    <string name="last_ten_day">Last 10 days</string>
    <string name="last_twenty_days">Last 20 days</string>
    <string name="last_one_month">Last 1 month</string>
    <string name="last_two_month">Last 2 month</string>
    <string name="last_three_month">Last 3 month</string>
    <string name="stock_available">Stock Available</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="order_npreparing">Order \n Preparing</string>
    <string name="select_any_option_for_n_order_history_search">Select any option for \n order history search</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="receive_notification">Receive Notification</string>
    <string name="select_time_estimation_for_n_order_number_35_n_preparation">Select time estimation for \n order preparation</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="send">Send</string>
    <string name="type_message">Type Message</string>
    <string name="payment_card_swipe">Payment: Card Swipe</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="other_detail">Other Detail</string>
    <string name="total">Total</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="service_tax">Service Tax</string>
    <string name="discount">Discount</string>
    <string name="order_ready">Order Ready!</string>
    <string name="set_your_presence">Set Your Presence</string>
    <string name="user_name">User Name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="your_order_getting_cooked">Your order getting cooked</string>
    <string name="order_pickedup">Order Pickedup</string>
    <string name="your_order_is_on_its_way">Your order is on its way</string>
    <string name="details">DETAILS</string>
    <string name="help">HELP</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="term_amp_condition"><![CDATA[Term & Condition]]></string>
    <string name="logout">Logout</string>
    <string name="servicio_de_asistencia">Servicio de asistencia</string>
    <string name="pedidos_no_entregados">pedidos no entregados</string>
</resources>