<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver_white"
    tools:context=".activity.SliderActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tendp"
        android:gravity="right"
        android:text="@string/skip"
        android:textColor="@color/foodie_color"
        android:textSize="@dimen/eighteensp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvLogin"
        android:layout_below="@+id/tvSkip"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIcon"
                android:layout_width="@dimen/dim150dp"
                android:layout_height="@dimen/dim120dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tendp"
                android:gravity="center"
                android:text="@string/welcome_to_foodie"
                android:textColor="@color/black"
                android:textSize="@dimen/sixteensp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tendp"
                android:gravity="center"
                android:text="@string/discover_new_dishes_everyday_and_hold_your_favourite_restaurant"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dim12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvSignUp"
        android:layout_marginLeft="@dimen/thirtydp"
        android:layout_marginTop="@dimen/twentydp"
        android:layout_marginRight="@dimen/thirtydp"
        android:background="@drawable/btn_red_back"
        android:gravity="center"
        android:padding="@dimen/tendp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/dim12sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/thirtydp"
        android:layout_marginTop="@dimen/twentydp"
        android:layout_marginRight="@dimen/thirtydp"
        android:layout_marginBottom="@dimen/twentydp"
        android:background="@drawable/edit_background"
        android:gravity="center"
        android:padding="@dimen/tendp"
        android:text="@string/sign_up"
        android:textColor="@color/foodie_color"
        android:textSize="@dimen/dim12sp"
        android:textStyle="bold" />
</RelativeLayout>