<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dim150dp"
                android:layout_height="@dimen/dim120dp"
                android:src="@drawable/logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tendp"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/foodie_color"
                android:textSize="@dimen/sixteensp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/thirtydp"
                android:layout_marginTop="@dimen/twentydp"
                android:layout_marginRight="@dimen/thirtydp"
                android:background="@drawable/edit_background"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/twentyfivedp"
                    android:layout_height="@dimen/twentyfivedp"
                    android:layout_gravity="center"
                    android:src="@drawable/columbia" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSTDCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dim5dp"
                    android:layout_marginRight="@dimen/dim5dp"
                    android:text="+57"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dim14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fortydp"
                    android:background="@null"
                    android:hint="@string/phone"
                    android:shadowColor="@color/shadow_color"
                    android:textColor="@color/foodie_color"
                    android:textColorHint="@color/foodie_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/dim14sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/thirtydp"
                android:layout_marginTop="@dimen/twentydp"
                android:layout_marginRight="@dimen/thirtydp"
                android:background="@drawable/btn_red_back"
                android:gravity="center"
                android:padding="@dimen/tendp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/dim14sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</RelativeLayout>
